# racecontrol-core

./: ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
racecontrolCore/services/: __init__.py  fantasy_service.py  state.py
racecontrolCore/ui/: __init__.py  layout.py
racecontrolCore/utils/: __init__.py  formatting.py
