[project]
name = "RaceControlCore"
version = "1.0.0"
description = "Streamlit UI for the RaceControl F1 dashboard"
authors = [{ name = "Ali Adem" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "streamlit>=1.32",
    "plotly>=5.17",
    "racecontrolClient @ git+https://github.com/aad3m/racecontrol-client.git@v1.0.0
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"